update last exexercise to display in html

--- a/Week 2/practice.html
+++ b/Week 2/practice.html
@@ -11,7 +11,11 @@
     </head>
     <body>
 
-    	<p>Here are my Exercises for practicing JavaScript</p>
+        <p>Here are my Exercises for practicing JavaScript</p>
+        <div id="loopingATriangle"></div>
+        <div id="fizzBuzz"></div>
+        <div id="chessBoard"></div>
+        
         <script src="practice.js"></script>
     </body>
 </html>
